// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Top Stories components when given appropriate data 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="top-stories-heading"
    class="GridWrapper-sc-12lwanc-0 hgpaqH"
    data-e2e="related-content"
    role="region"
  >
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 LegacyGridItemConstrainedLarge-opyob2-1 curbRF"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 jpnPtT"
      >
        <div
          class="Bar-sc-1x4gwjz-0 jsgdXU"
        />
        <h2
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 cERxQI"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-2 brjIMO"
        role="list"
      >
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 burCNM"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="TextGridItem-sc-1lkbq5i-0 iWRqFl"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 gejHzT"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/mundo/noticias-internacional-51939501"
                >
                  China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                </a>
              </h3>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 burCNM"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="TextGridItem-sc-1lkbq5i-0 iWRqFl"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 gejHzT"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/pidgin/tori-51945757"
                >
                  Nigeria don get five new cases of Coronavirus - See how e happun
                </a>
              </h3>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Top Stories components when without <ul> 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="top-stories-heading"
    class="GridWrapper-sc-12lwanc-0 hgpaqH"
    data-e2e="related-content"
    role="region"
  >
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 LegacyGridItemConstrainedLarge-opyob2-1 curbRF"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 jpnPtT"
      >
        <div
          class="Bar-sc-1x4gwjz-0 jsgdXU"
        />
        <h2
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 cERxQI"
                dir="ltr"
                id="top-stories-heading"
              >
                Top Tori
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="SingleContentWrapper-opyob2-3 gppAKd"
      >
        <div
          class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
        >
          <div
            class="TextGridItem-sc-1lkbq5i-0 iWRqFl"
            dir="ltr"
          >
            <h3
              class="Headline-sc-1dvfmi3-3 gejHzT"
            >
              <a
                class="Link-sc-1dvfmi3-5 jeUMCT"
                href="/mundo/noticias-internacional-51939501"
              >
                China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
              </a>
            </h3>
            <time
              class="StyledTimestamp-um718p-0 kVWTyt"
              datetime="2020-02-03"
            >
              3rd February 2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
